--- a/wp-content/plugins/rip-podcasts/assets/admin-podcasts.css
+++ b/wp-content/plugins/rip-podcasts/assets/admin-podcasts.css
@@ -109,6 +109,13 @@
     padding: 5px;
 }
 
+#podcasts article .loader {
+    position: absolute;
+    top: 58px;
+    width: 30px;
+    left: 430px;
+}
+
 /* PROGRAM PAGE */
 #programs .podcast-control {
     width: 200px;
